[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-creator-bot"
version = "0.1.0"
description = "A self-directed project creation bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["bot"]
